welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: not found: value y
  y=Math.min(a,b)
  ^max1020:5: error: not found: value y
  if (z>=20 && y<=10){
               ^max1020:10: error: not found: value y
  return y
         ^